﻿Current

Fixed: GITHUB-1064: Incorrect logging of parallel mode of a test
Fixed: GITHUB-1178: Halt execution when invalid testname is provided. (Krishnan Mahadevan)
Fixed: GITHUB-1139: DataProvider could support Object[] as a valid return type (Julien Herr)

6.9.13.4 (Bad release: Wrong interna version)
2016/09/22

New: Hierarchy on order features (from less important to more important): groupByInstance, preserveOrder, priority, dependsOnGroups, dependsOnMethods
Fixed: GITHUB-1156: test execution dependant upon class name order and fails with TestNGException: No free nodes found (@t-weil & Julien Herr)

6.9.13.3 (Ok, but too many direct dependencies)
2016/09/22

6.9.13.2 (Bad release: Wrong internal version)
2016/09/20

6.9.13.1 (Bad release: fat jar)
2016/09/19

6.9.13 (Bad release: JDK8 target only)
2016/09/16

New: code improvement in order to calculate key for dependency map. Dependency map will use methodQualifiedName as key provided by ITestNGMethod (Chirag Jayswal)
Fixed: GITHUB-1105: Test skipped instead failed if incorrect enum value (Liza Ivanova & Julien Herr)﻿
Fixed: GITHUB-1111: XMLReporter crashes if a test parameter is exactly "]]>" (Łukasz Rekucki & Julien Herr)
Fixed: GITHUB-1108 @BeforeGroups called twice (Krishnan Mahadevan)
Fixed: GITHUB-1112 XmlInclude.getDescription returns null always (Krishnan Mahadevan)
Fixed: GITHUB-1090 Inconsistent handling "preserve-order" on suite/test level (Michal Domagala & Julien Herr)
Fixed: GITHUB-1085 Remove Guava dependency (Erik C. Thauvin & Julien Herr)
Fixed: GITHUB-1084 Using deprecated addListener methods should not register many times (Anna Kozlova & Julien Herr)
Fixed: GITHUB-447 Copy test parameters instead of storing a reference (Huagang Li & Julien Herr)
Fixed: GITHUB-174: NPE when parsing xml where <suite> has <groups> (Peter Stout & Julien Herr)
Fixed: GITHUB-918: NullPointerException on loading XmlSuites programmatically (@ispitkovskyi & Julien Herr)