@@ -1,0 +1,41 @@
+package test.dependsongroup;
+
+import org.testng.Assert;
+import org.testng.TestListenerAdapter;
+import org.testng.TestNG;
+import org.testng.TestNGException;
+import org.testng.annotations.AfterMethod;
+import org.testng.annotations.Test;
+
+public class AfterMethodTest {
+
+	@Test
+	public void testAfterMethodAnnotation() {
+		TestNG testng = new TestNG();
+		TestListenerAdapter tla = new TestListenerAdapter();
+		testng.addListener(tla);
+		testng.setTestClasses(new Class[] { AfterMethodSample.class });
+
+		try {
+			testng.run();
+		} catch (TestNGException e) {
+			e.printStackTrace();
+		}
+
+		Assert.assertEquals(tla.getPassedTests().size(), 2, "Expected tests to pass");
+	}
+}
+
+class AfterMethodSample {
+	@Test
+	public void test1() {
+	}
+
+	@Test
+	public void test2() {
+	}
+
+	@AfterMethod(dependsOnMethods = { "test2" })
+	public void test4() {
+	}
+}
