@@ -1,6 +1,7 @@
 ﻿Current
 
-Fixed: GITHUB-1064: Incorrect logging of parallel mode of a test
+Fixed: GITHUB-1106: Strange behavior when dependsOnMethods is used on @AfterMethod (Ryan Levell)
+Fixed: GITHUB-1064: Incorrect logging of parallel mode of a test (Ryan Levell)
 Fixed: GITHUB-1178: Halt execution when invalid testname is provided. (Krishnan Mahadevan)
 Fixed: GITHUB-1139: DataProvider could support Object[] as a valid return type (Julien Herr)
 
